# android-platform-tools-base

./: .editorconfig  BUILD.bazel  PREUPLOAD.cfg  README.md  navbar.md  project.config
adblib/: BUILD  (+3 more)
app-inspection/native/: CMakeLists.txt
app-inspection/native/include/common/: app_inspection_common.h
app-inspection/native/src/: app_inspection_java_jni.cc
app-inspection/native/src/commands/: app_inspection_agent_command.cc
app-inspection/native/src/common/: app_inspection_common.cc
bazel/: BUILD  OWNERS  README.md  android.bzl  aosp_studio_linux.sh  bazel  bazel.bzl  common.bazelrc  coverage.bzl  expand_template.bzl  gradle.bzl  java.bzl  kotlin.bzl  lint.bzl  maven.bzl  perfgate_linux.sh  perfgate_win.cmd  platform_specific.bazelrc  proto.bzl  repositories.bzl  robolectric.bzl  status_reader_test.py  studio_coverage.sh  studio_linux.sh  studio_linux_k2.sh  studio_mac.sh  studio_mac_arm.sh  studio_win.cmd  targets  targets.win  tools.BUILD.bazel  toplevel.MODULE.bazel  toplevel.WORKSPACE  toplevel.bazel.rc  toplevel.bazelignore  utils.bzl  vendor.bzl  workspace.cmd  workspace.py
bazel/avd/: BUILD  avd.bzl  emulator_launcher.sh.template  system_images.BUILD
bazel/avd/sample/: BUILD  EmulatorTest.java
bazel/bzlmod/: BUILD  external.MODULE.bazel  toolchains.MODULE.bazel
bazel/ci/: BUILD  README.md  bazel.py  bazel_diff.py  ci  ci.cmd  ci.py  ci_test.py  errors.py  fake_build_env.py  fake_gce.py  gce.py  gce_test.py  presubmit.py  presubmit_test.py  query_checks.py  studio.py  studio_linux.py  studio_linux_canary.sh  studio_lldb.sh  studio_mac.py  studio_nightly.sh  studio_win.py  studio_win_canary.cmd
bazel/ci/conditions/: BUILD
bazel/ci/data/: allowlist-targets-local-strategy.txt
bazel/coverage/: BUILD  coverage.bzl  ignore_files_filter.py
bazel/expander/: BUILD  expander.py  expander_test.py
bazel/expander/test_data/: expected.txt  template.txt
bazel/jarjar/: BUILD  jarjar.BUILD  jarjar.bzl  rename_jar_resources.py  rename_jar_resources_test.py  rename_jar_services_test.py
bazel/lnzipper/: BUILD
bazel/maven/: BUILD.maven  artifacts.bzl  maven_clean.sh
bazel/native/matryoshka/: BUILD
bazel/perfetto_cfg/: perfetto_cfg.bzl
bazel/qa/: qa_fast_linux.sh  qa_smoke_linux.sh  qa_smoke_linux_multirun.sh  qa_smoke_mac.sh  qa_smoke_mac_arm.sh  qa_smoke_win.cmd
bazel/rbe/: BUILD  build_docker.sh  build_docker_windows.sh  windows_path_test.py
bazel/rbe/docker/: Dockerfile
bazel/sdk/: dev-sdk-packages  download-sdk-for-aosp.sh  prebuilts.studio.sdk.BUILD  remote-sdk-packages  sdk_utils.bzl
bazel/sdk/resources/: linux_start_script.sh  mac_start_script.sh  win_start_script.bat
bazel/sdk/src/com/android/tools/utils/: RemoteSdkUpdater.java
bazel/shell/: BUILD  workspace-cp.sh
bazel/src/com/android/tools/bazel/: IrToBazel.java
bazel/src/com/android/tools/binaries/: BazelLintWrapper.java  LocalMavenRepositoryGenerator.java
bazel/src/com/android/tools/gradle/: Gradle.java  GradleW.java
bazel/src/com/android/tools/json/: GradleMetadataJsonReader.java
bazel/src/com/android/tools/kotlin/: KotlinCompiler.java
bazel/src/com/android/tools/maven/: AetherUtils.java  ArtifactOriginWriter.java  CustomRepositoryListener.java  CustomVersionRangeResolver.java  HandleAarDescriptorReaderDelegate.java  ImportDependencyVisitor.java  MavenRepository.java
bazel/src/com/android/tools/repository_generator/: BuildFileWriter.java  ResolutionResult.java
bazel/test/gradle/: BUILD
bazel/test/local_maven_repository_generator/: BUILD.golden
bazel/test/pom_generator/: golden.pom
bazel/testSrc/com/android/tools/binaries/: LocalMavenRepositoryGeneratorTest.java  PomGeneratorTest.java
bazel/testSrc/com/android/tools/gradle/: BenchmarkTest.java
bazel/toolchains/: cc_toolchain_config.bzl  clang.BUILD
bazel/toolchains/darwin/: BUILD
bazel/validations/: exec_props.bzl  flaky.bzl  timeout.bzl
build-system/aapt2/: BUILD.bazel  aapt2_versions.bzl  build.gradle
build-system/aapt2-proto/: BUILD.bazel  build.gradle
build-system/builder-r8/: BUILD.bazel  build.gradle  lint_baseline.xml  lint_baseline_tests.xml  lint_output.xml
build-system/integration-test/connected/: BUILD.bazel  build.gradle  connected-test.bzl  lint_baseline.xml
build-system/integration-test/managed-devices/: BUILD.bazel
utp/: BUILD.bazel
utp/android-device-provider-ddmlib/: BUILD  build.gradle
utp/android-device-provider-ddmlib-proto/: BUILD
utp/android-device-provider-gradle/: BUILD  build.gradle
utp/android-device-provider-gradle-proto/: BUILD
utp/android-device-provider-profile/: BUILD  build.gradle
utp/android-device-provider-profile-proto/: BUILD
utp/android-device-provider-profile-proto/src/main/proto/: android_device_provider_profile.proto
utp/android-test-plugin-host-additional-test-output/: BUILD  build.gradle
utp/android-test-plugin-host-additional-test-output-proto/: BUILD
utp/android-test-plugin-host-apk-installer/: BUILD  build.gradle
utp/android-test-plugin-host-apk-installer-proto/: BUILD
utp/android-test-plugin-host-apk-installer-proto/src/main/proto/: android_apk_installer_config.proto
utp/android-test-plugin-host-coverage/: BUILD  build.gradle
utp/android-test-plugin-host-coverage-proto/: BUILD
utp/android-test-plugin-host-device-info/: BUILD  build.gradle
utp/android-test-plugin-host-device-info-proto/: BUILD
utp/android-test-plugin-host-emulator-control/: BUILD  build.gradle
utp/android-test-plugin-host-emulator-control-proto/: BUILD
utp/android-test-plugin-host-emulator-control-proto/src/main/proto/: emulator_control_plugin.proto
utp/android-test-plugin-host-logcat/: BUILD  build.gradle
utp/android-test-plugin-host-logcat-proto/: BUILD
utp/android-test-plugin-host-logcat-proto/src/main/proto/: android_test_logcat_config.proto
utp/android-test-plugin-host-retention/: BUILD  build.gradle
utp/android-test-plugin-host-retention-proto/: BUILD
utp/android-test-plugin-result-listener-gradle/: BUILD  build.gradle
utp/android-test-plugin-result-listener-gradle-proto/: BUILD
utp/common/: BUILD
utp/utp-common/: BUILD
(+4911 files in other folders)
