module(
    name = "android_studio",
)

bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_cc", version = "0.0.10")
bazel_dep(name = "rules_python", version = "0.36.0")

include("//tools/base/bazel/bzlmod:external.MODULE.bazel")

include("//tools/base/bazel/bzlmod:toolchains.MODULE.bazel")
