load("//tools/base/bazel:maven.bzl", "maven_library")
load("//tools/base/common:version.bzl", "BUILD_VERSION")
load("//prebuilts/tools/common/aapt:aapt2_version.bzl", "AAPT2_VERSION")

maven_library(
    name = "aapt2-proto",
    srcs = [],
    bundled_deps = [
        "//prebuilts/tools/common/aapt/protos",
    ],
    coordinates = "com.android.tools.build:aapt2-proto:" + BUILD_VERSION + "-" + AAPT2_VERSION,
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:com.google.protobuf.protobuf-java",
    ],
)

filegroup(
    name = "agp_gradle_build_files",
    srcs = glob([
        "src/main/**/*.java",
        "src/main/**/*.kt",
        "src/main/resources/**",
    ]) + [
        "build.gradle",
        "//tools/buildSrc/base:version.properties",
        "//prebuilts/tools/common/aapt:aapt2_version.properties",
    ],
    visibility = ["//tools/base/build-system:__pkg__"],
)
