load("//tools/base/bazel:maven.bzl", "custom_maven_library")
load("//tools/base/bazel:merge_archives.bzl", "merge_jars")
load("aapt2_versions.bzl", "AAPT2_VERSION", "DEV_AAPT2_VERSION", "RELEASE_AAPT2_VERSION")

custom_maven_library(
    name = "aapt2",
    coordinates = "com.android.tools.build:aapt2",
    files = select({
        "//tools/base/bazel:release": {
            ":darwin.jar": "aapt2-" + RELEASE_AAPT2_VERSION + "-osx.jar",
            ":linux.jar": "aapt2-" + RELEASE_AAPT2_VERSION + "-linux.jar",
            ":windows.jar": "aapt2-" + RELEASE_AAPT2_VERSION + "-windows.jar",
        },
        "//conditions:default": {
            ":darwin.jar": "aapt2-" + DEV_AAPT2_VERSION + "-osx.jar",
            ":linux.jar": "aapt2-" + DEV_AAPT2_VERSION + "-linux.jar",
            ":windows.jar": "aapt2-" + DEV_AAPT2_VERSION + "-windows.jar",
        },
    }),
    version = AAPT2_VERSION,
    visibility = ["//visibility:public"],
)

java_library(
    name = "notice",
    resource_strip_prefix = "prebuilts/tools/common/aapt",
    resources = ["//prebuilts/tools/common/aapt:NOTICE"],
)

DARWIN_FILES = [
    "//prebuilts/tools/common/aapt:darwin/aapt2",
]

java_library(
    name = "darwin_resources",
    resource_strip_prefix = "prebuilts/tools/common/aapt/darwin",
    resources = DARWIN_FILES,
)

merge_jars(
    name = "darwin",
    out = "darwin.jar",
    jars = [
        ":darwin_resources",
        ":notice",
    ],
)

LINUX_FILES = [
    "//prebuilts/tools/common/aapt:linux/aapt2",
]

java_library(
    name = "linux_resources",
    resource_strip_prefix = "prebuilts/tools/common/aapt/linux",
    resources = LINUX_FILES,
)

merge_jars(
    name = "linux",
    out = "linux.jar",
    jars = [
        ":linux_resources",
        ":notice",
    ],
)

WINDOWS_FILES = [
    "//prebuilts/tools/common/aapt:windows/aapt2.exe",
]

java_library(
    name = "windows_resources",
    resource_strip_prefix = "prebuilts/tools/common/aapt/windows",
    resources = WINDOWS_FILES,
)

merge_jars(
    name = "windows",
    out = "windows.jar",
    jars = [
        ":windows_resources",
        ":notice",
    ],
)

filegroup(
    name = "aapt2_for_tests",
    srcs = DARWIN_FILES + LINUX_FILES + WINDOWS_FILES,
    visibility = ["//tools/base:__subpackages__"],
)

filegroup(
    name = "agp_gradle_build_files",
    srcs = glob([
        "src/main/**/*.java",
        "src/main/**/*.kt",
        "src/main/resources/**",
    ]) + [
        "build.gradle",
        "//prebuilts/tools/common/aapt:NOTICE",
    ] + DARWIN_FILES + LINUX_FILES + WINDOWS_FILES,
    visibility = ["//tools/base/build-system:__pkg__"],
)
